include/mcp/c_api/mcp_c_api.h

/* ============================================================================
 * RAII Guard Functions with Enhanced Safety
 * ============================================================================
 */

/**
 * RAII guard handle for automatic resource cleanup
 * Guards are automatically destroyed when going out of scope in C++
 * For C users, explicit destruction is required
 */
typedef struct mcp_guard_impl* mcp_guard_t;
/* ============================================================================
 * Connection Management with RAII
 * ============================================================================
 */

/**
 * Extended transport configuration for MCP connections
 */
typedef struct mcp_transport_config {
  mcp_transport_type_t type;

  /* Transport-specific configuration */
  union {
    struct {
      mcp_bool_t use_tls;
      const char* alpn_protocols; /* Comma-separated ALPN protocols */
      const char* sni_hostname;   /* SNI hostname for TLS */
    } tcp;

    struct {
      int stdin_fd;  /* -1 for default stdin */
      int stdout_fd; /* -1 for default stdout */
      int stderr_fd; /* -1 for default stderr */
    } stdio;

    struct {
      const char* http_headers; /* Additional HTTP headers for MCP */
      uint32_t retry_delay_ms;
      uint32_t max_retries;
      mcp_bool_t use_compression;
    } http_sse;
  } config;

  /* Common options */
  uint32_t connect_timeout_ms;
  uint32_t idle_timeout_ms;
  mcp_bool_t enable_keepalive;
  uint32_t keepalive_interval_ms;
} mcp_transport_config_t;
/**
 * Create a client connection with transport configuration
 * @param dispatcher Event dispatcher handle
 * @param transport_config Transport configuration (if NULL, uses defaults)
 * @return Connection handle or NULL on error
 */
MCP_API mcp_connection_t mcp_connection_create_client_ex(
    mcp_dispatcher_t dispatcher,
    const mcp_transport_config_t* transport_config) MCP_NOEXCEPT;
/**
 * Create client connection with RAII guard
 * @param dispatcher Event dispatcher handle
 * @param transport_config Transport configuration
 * @param guard Output: RAII guard for automatic cleanup
 * @return Connection handle or NULL on error
 */
MCP_API mcp_connection_t mcp_connection_create_client_guarded(
    mcp_dispatcher_t dispatcher,
    const mcp_transport_config_t* transport_config,
    mcp_guard_t* guard) MCP_NOEXCEPT;
/**
 * Configure connection
 * @param connection Connection handle
 * @param address Target address (NULL for stdio)
 * @param options Socket options (NULL for defaults)
 * @param ssl_config SSL configuration (NULL for non-SSL)
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_connection_configure(mcp_connection_t connection,
                         const mcp_address_t* address,
                         const mcp_socket_options_t* options,
                         const mcp_ssl_config_t* ssl_config) MCP_NOEXCEPT;
/**
 * Set connection callbacks
 * @param connection Connection handle
 * @param state_cb State change callback
 * @param data_cb Data received callback
 * @param error_cb Error callback
 * @param user_data User data for callbacks
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_connection_set_callbacks(mcp_connection_t connection,
                             mcp_connection_state_callback_t state_cb,
                             mcp_data_callback_t data_cb,
                             mcp_error_callback_t error_cb,
                             void* user_data) MCP_NOEXCEPT;
/**
 * Set watermarks for flow control
 * @param connection Connection handle
 * @param config Watermark configuration
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_connection_set_watermarks(
    mcp_connection_t connection,
    const mcp_watermark_config_t* config) MCP_NOEXCEPT;
/**
 * Connect (async)
 * @param connection Connection handle
 * @return MCP_OK if connection started
 */
MCP_API mcp_result_t mcp_connection_connect(mcp_connection_t connection)
    MCP_NOEXCEPT;
/**
 * Write data (async)
 * @param connection Connection handle
 * @param data Data to write
 * @param length Data length
 * @param callback Write complete callback (optional)
 * @param user_data User data for callback
 * @return MCP_OK if write queued
 */
MCP_API mcp_result_t mcp_connection_write(mcp_connection_t connection,
                                          const uint8_t* data,
                                          size_t length,
                                          mcp_write_callback_t callback,
                                          void* user_data) MCP_NOEXCEPT;
/**
 * Close connection
 * @param connection Connection handle
 * @param flush Whether to flush pending writes
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_connection_close(mcp_connection_t connection,
                                          mcp_bool_t flush) MCP_NOEXCEPT;
/**
 * Get connection state
 * @param connection Connection handle
 * @return Current connection state
 */
MCP_API mcp_connection_state_t
mcp_connection_get_state(mcp_connection_t connection) MCP_NOEXCEPT;
/**
 * Get connection statistics
 * @param connection Connection handle
 * @param bytes_read Output: total bytes read
 * @param bytes_written Output: total bytes written
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_connection_get_stats(mcp_connection_t connection,
                                              uint64_t* bytes_read,
                                              uint64_t* bytes_written)
    MCP_NOEXCEPT;
/**
 * Destroy connection
 * @param connection Connection handle
 */
MCP_API void mcp_connection_destroy(mcp_connection_t connection) MCP_NOEXCEPT;
/* ============================================================================
 * Server & Listener with RAII
 * ============================================================================
 */

/**
 * Create a listener
 * @param dispatcher Dispatcher handle
 * @param transport Transport type
 * @return Listener handle or NULL on error
 */
MCP_API mcp_listener_t mcp_listener_create(
    mcp_dispatcher_t dispatcher, mcp_transport_type_t transport) MCP_NOEXCEPT;
/**
 * Create listener with RAII guard
 * @param dispatcher Dispatcher handle
 * @param transport Transport type
 * @param guard Output: RAII guard for automatic cleanup
 * @return Listener handle or NULL on error
 */
MCP_API mcp_listener_t
mcp_listener_create_guarded(mcp_dispatcher_t dispatcher,
                            mcp_transport_type_t transport,
                            mcp_guard_t* guard) MCP_NOEXCEPT;
/**
 * Configure listener
 * @param listener Listener handle
 * @param address Bind address (NULL for stdio)
 * @param options Socket options (NULL for defaults)
 * @param ssl_config SSL configuration (NULL for non-SSL)
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_listener_configure(mcp_listener_t listener,
                                            const mcp_address_t* address,
                                            const mcp_socket_options_t* options,
                                            const mcp_ssl_config_t* ssl_config)
    MCP_NOEXCEPT;
/**
 * Set accept callback
 * @param listener Listener handle
 * @param callback Accept callback
 * @param user_data User data for callback
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_listener_set_accept_callback(mcp_listener_t listener,
                                 mcp_accept_callback_t callback,
                                 void* user_data) MCP_NOEXCEPT;
/**
 * Start listening
 * @param listener Listener handle
 * @param backlog Connection backlog
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_listener_start(mcp_listener_t listener,
                                        int backlog) MCP_NOEXCEPT;
/**
 * Stop listening
 * @param listener Listener handle
 */
MCP_API void mcp_listener_stop(mcp_listener_t listener) MCP_NOEXCEPT;
/**
 * Destroy listener
 * @param listener Listener handle
 */
MCP_API void mcp_listener_destroy(mcp_listener_t listener) MCP_NOEXCEPT;
/* ============================================================================
 * MCP Client with RAII
 * ============================================================================
 */

/**
 * Create MCP client
 * @param dispatcher Dispatcher handle
 * @param config Client configuration
 * @return Client handle or NULL on error
 */
MCP_API mcp_client_t mcp_client_create(mcp_dispatcher_t dispatcher,
                                       const mcp_client_config_t* config)
    MCP_NOEXCEPT;
/**
 * Create MCP client with RAII guard
 * @param dispatcher Dispatcher handle
 * @param config Client configuration
 * @param guard Output: RAII guard for automatic cleanup
 * @return Client handle or NULL on error
 */
MCP_API mcp_client_t
mcp_client_create_guarded(mcp_dispatcher_t dispatcher,
                          const mcp_client_config_t* config,
                          mcp_guard_t* guard) MCP_NOEXCEPT;
/**
 * Set MCP message callbacks
 * @param client Client handle
 * @param request_cb Request callback
 * @param response_cb Response callback
 * @param notification_cb Notification callback
 * @param user_data User data for callbacks
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_client_set_callbacks(mcp_client_t client,
                         mcp_request_callback_t request_cb,
                         mcp_response_callback_t response_cb,
                         mcp_notification_callback_t notification_cb,
                         void* user_data) MCP_NOEXCEPT;
/**
 * Connect client
 * @param client Client handle
 * @return MCP_OK if connection started
 */
MCP_API mcp_result_t mcp_client_connect(mcp_client_t client) MCP_NOEXCEPT;
/**
 * Initialize protocol handshake
 * @param client Client handle
 * @return Request ID for tracking
 */
MCP_API mcp_request_id_t mcp_client_initialize(mcp_client_t client)
    MCP_NOEXCEPT;
/**
 * Send request
 * @param client Client handle
 * @param method Method name
 * @param params Parameters (JSON value)
 * @return Request ID for tracking
 */
MCP_API mcp_request_id_t mcp_client_send_request(mcp_client_t client,
                                                 mcp_string_t method,
                                                 mcp_json_value_t params)
    MCP_NOEXCEPT;
/**
 * Send notification
 * @param client Client handle
 * @param method Method name
 * @param params Parameters (JSON value)
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_client_send_notification(mcp_client_t client,
                                                  mcp_string_t method,
                                                  mcp_json_value_t params)
    MCP_NOEXCEPT;
/**
 * List available tools
 * @param client Client handle
 * @return Request ID for tracking
 */
MCP_API mcp_request_id_t mcp_client_list_tools(mcp_client_t client)
    MCP_NOEXCEPT;
/**
 * Call a tool
 * @param client Client handle
 * @param name Tool name
 * @param arguments Tool arguments (JSON value)
 * @return Request ID for tracking
 */
MCP_API mcp_request_id_t mcp_client_call_tool(mcp_client_t client,
                                              mcp_string_t name,
                                              mcp_json_value_t arguments)
    MCP_NOEXCEPT;
/**
 * List resources
 * @param client Client handle
 * @return Request ID for tracking
 */
MCP_API mcp_request_id_t mcp_client_list_resources(mcp_client_t client)
    MCP_NOEXCEPT;
/**
 * Read resource
 * @param client Client handle
 * @param uri Resource URI
 * @return Request ID for tracking
 */
MCP_API mcp_request_id_t
mcp_client_read_resource(mcp_client_t client, mcp_string_t uri) MCP_NOEXCEPT;
/**
 * List prompts
 * @param client Client handle
 * @return Request ID for tracking
 */
MCP_API mcp_request_id_t mcp_client_list_prompts(mcp_client_t client)
    MCP_NOEXCEPT;
/**
 * Get prompt
 * @param client Client handle
 * @param name Prompt name
 * @param arguments Prompt arguments (map of string to string)
 * @return Request ID for tracking
 */
MCP_API mcp_request_id_t mcp_client_get_prompt(
    mcp_client_t client, mcp_string_t name, mcp_map_t arguments) MCP_NOEXCEPT;
/**
 * Disconnect client
 * @param client Client handle
 */
MCP_API void mcp_client_disconnect(mcp_client_t client) MCP_NOEXCEPT;
/**
 * Destroy client
 * @param client Client handle
 */
MCP_API void mcp_client_destroy(mcp_client_t client) MCP_NOEXCEPT;
/* ============================================================================
 * MCP Server with RAII
 * ============================================================================
 */

/**
 * Create MCP server
 * @param dispatcher Dispatcher handle
 * @param config Server configuration
 * @return Server handle or NULL on error
 */
MCP_API mcp_server_t mcp_server_create(mcp_dispatcher_t dispatcher,
                                       const mcp_server_config_t* config)
    MCP_NOEXCEPT;
/**
 * Create MCP server with RAII guard
 * @param dispatcher Dispatcher handle
 * @param config Server configuration
 * @param guard Output: RAII guard for automatic cleanup
 * @return Server handle or NULL on error
 */
MCP_API mcp_server_t
mcp_server_create_guarded(mcp_dispatcher_t dispatcher,
                          const mcp_server_config_t* config,
                          mcp_guard_t* guard) MCP_NOEXCEPT;