sdk/csharp/src/Interop/McpApi.cs


        /// <summary>
        /// Create a client connection with extended config
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpConnectionHandle mcp_connection_create_client_ex(
            McpDispatcherHandle dispatcher,
            ref mcp_transport_config_t transport_config);

        /// <summary>
        /// Create client connection with RAII guard
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpConnectionHandle mcp_connection_create_client_guarded(
            McpDispatcherHandle dispatcher,
            ref mcp_transport_config_t transport_config,
            out McpGuardHandle guard);

        /// <summary>
        /// Configure connection
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_connection_configure(
            McpConnectionHandle connection,
            ref mcp_address_t address,
            ref mcp_socket_options_t options,
            ref mcp_ssl_config_t ssl_config);

        /// <summary>
        /// Set connection callbacks
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_connection_set_callbacks(
            McpConnectionHandle connection,
            MCP_CONNECTION_STATE_CALLBACK state_cb,
            MCP_DATA_CALLBACK data_cb,
            MCP_ERROR_CALLBACK error_cb,
            IntPtr user_data);

        /// <summary>
        /// Set watermarks for flow control
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_connection_set_watermarks(
            McpConnectionHandle connection,
            ref mcp_watermark_config_t config);

        /// <summary>
        /// Connect (async)
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_connection_connect(McpConnectionHandle connection);

        /// <summary>
        /// Write data (async)
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_connection_write(
            McpConnectionHandle connection,
            IntPtr data,
            UIntPtr length,
            MCP_WRITE_CALLBACK callback,
            IntPtr user_data);

        /// <summary>
        /// Close connection
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_connection_close(
            McpConnectionHandle connection,
            mcp_bool_t flush);

        /// <summary>
        /// Get connection state
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_connection_state_t mcp_connection_get_state(McpConnectionHandle connection);

        /// <summary>
        /// Get connection statistics
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_connection_get_stats(
            McpConnectionHandle connection,
            out ulong bytesRead,
            out ulong bytesWritten);

        /// <summary>
        /// Destroy connection
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_connection_destroy(McpConnectionHandle connection);

        /* ============================================================================
         * Server & Listener
         * ============================================================================ */

        /// <summary>
        /// Create a listener
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpListenerHandle mcp_listener_create(
            McpDispatcherHandle dispatcher,
            mcp_transport_type_t transport);

        /// <summary>
        /// Create listener with RAII guard
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpListenerHandle mcp_listener_create_guarded(
            McpDispatcherHandle dispatcher,
            mcp_transport_type_t transport,
            out McpGuardHandle guard);

        /// <summary>
        /// Configure listener
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_listener_configure(
            McpListenerHandle listener,
            ref mcp_address_t address,
            ref mcp_socket_options_t options,
            ref mcp_ssl_config_t ssl_config);

        /// <summary>
        /// Set accept callback
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_listener_set_accept_callback(
            McpListenerHandle listener,
            MCP_ACCEPT_CALLBACK callback,
            IntPtr user_data);

        /// <summary>
        /// Start listening
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_listener_start(
            McpListenerHandle listener,
            int backlog);

        /// <summary>
        /// Stop listening
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_listener_stop(McpListenerHandle listener);

        /// <summary>
        /// Destroy listener
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_listener_destroy(McpListenerHandle listener);

        /* ============================================================================
         * MCP Client
         * ============================================================================ */

        /// <summary>
        /// Create MCP client
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpClientHandle mcp_client_create(
            McpDispatcherHandle dispatcher,
            ref mcp_client_config_t config);

        /// <summary>
        /// Create MCP client with RAII guard
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpClientHandle mcp_client_create_guarded(
            McpDispatcherHandle dispatcher,
            ref mcp_client_config_t config,
            out McpGuardHandle guard);

        /// <summary>
        /// Set MCP message callbacks
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_client_set_callbacks(
            McpClientHandle client,
            MCP_REQUEST_CALLBACK request_cb,
            MCP_RESPONSE_CALLBACK response_cb,
            MCP_NOTIFICATION_CALLBACK notification_cb,
            IntPtr user_data);

        /// <summary>
        /// Connect client
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_client_connect(McpClientHandle client);

        /// <summary>
        /// Initialize protocol handshake
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpRequestIdHandle mcp_client_initialize(McpClientHandle client);

        /// <summary>
        /// Send request
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpRequestIdHandle mcp_client_send_request(
            McpClientHandle client,
            mcp_string_t method,
            McpJsonValueHandle parameters);

        /// <summary>
        /// Send notification
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_client_send_notification(
            McpClientHandle client,
            mcp_string_t method,
            McpJsonValueHandle parameters);

        /// <summary>
        /// List available tools
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpRequestIdHandle mcp_client_list_tools(McpClientHandle client);

        /// <summary>
        /// Call a tool
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpRequestIdHandle mcp_client_call_tool(
            McpClientHandle client,
            mcp_string_t name,
            McpJsonValueHandle arguments);

        /// <summary>
        /// List resources
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpRequestIdHandle mcp_client_list_resources(McpClientHandle client);

        /// <summary>
        /// Read resource
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpRequestIdHandle mcp_client_read_resource(
            McpClientHandle client,
            mcp_string_t uri);

        /// <summary>
        /// List prompts
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpRequestIdHandle mcp_client_list_prompts(McpClientHandle client);

        /// <summary>
        /// Get prompt
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpRequestIdHandle mcp_client_get_prompt(
            McpClientHandle client,
            mcp_string_t name,
            McpMapHandle arguments);

        /// <summary>
        /// Disconnect client
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_client_disconnect(McpClientHandle client);

        /// <summary>
        /// Destroy client
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_client_destroy(McpClientHandle client);

        /* ============================================================================
         * MCP Server
         * ============================================================================ */

        /// <summary>
        /// Create MCP server
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpServerHandle mcp_server_create(
            McpDispatcherHandle dispatcher,
            ref mcp_server_config_t config);

        /// <summary>
        /// Create MCP server with RAII guard
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpServerHandle mcp_server_create_guarded(
            McpDispatcherHandle dispatcher,
            ref mcp_server_config_t config,
            out McpGuardHandle guard);
